<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="RegisterActivity">

    <View
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:alpha="0.5"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/registration"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        android:textColorHint="#999999"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:drawableLeft="@drawable/password_icon"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:textSize="15sp"
        android:textColor="@color/textColor"
        android:textColorHint="#999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password_icon"
        android:hint="@string/prompt_confirmPassword"
        android:textColor="@color/textColor"
        android:textColorHint="#999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:textSize="15sp"
        android:drawableLeft="@drawable/ic_mail"
        android:inputType="textEmailAddress"
        android:hint="@string/prompt_email"
        android:textColor="@color/textColor"
        android:textColorHint="#999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

    <EditText
        android:id="@+id/DOBEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:drawableLeft="@drawable/ic_cake"
        android:ems="10"
        android:textSize="15sp"
        android:inputType="date"
        android:hint="@string/prompt_dob"
        android:textColor="@color/textColor"
        android:textColorHint="#999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/sign_in_drawable"
        android:text="@string/register"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DOBEditText"
        app:layout_constraintVertical_bias="0.673" />

    <TextView
        android:id="@+id/registerErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#DC0404"
        android:background="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DOBEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>